--- a/8. StepSequencer/SS.css
+++ b/8. StepSequencer/SS.css
@@ -1,4 +1,4 @@
-body{
+body {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -10,6 +10,9 @@ body{
 }
 
 div#controls {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     height: 5vh;
 }
 
@@ -25,5 +28,25 @@ div#container {
 
 div.cell {
     background-color: DarkMagenta; 
-    cursor : pointer;
+    cursor: pointer;
+}
+
+span.output {
+    font-size: 1.5vh;
+}
+		
+button {
+    font-size: 1.8vh;
+    height: 4vh;
+    width: 4vh;
+    color: DarkMagenta;
+    background-color: Lavender;
+    margin-bottom: 5px;
+}
+
+select {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 1.5vh;
+    color: DarkMagenta;
+    background-color: Lavender;
 }
